# includer

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.py
man/: CMakeLists.txt  includer.1
src/: CMakeLists.txt  CliOptions.cpp  CliOptions.h  CliOptions.hpp  FileHandler.cpp  FileHandler.hpp  FileInputStream.h  FileInputStreamFactory.h  IFileHandler.hpp  IFileInputStreamFactory.h  IInputStream.h  IOutputStream.h  Processor.cpp  Processor.h  Processor.hpp  StdOutputStream.h  main.cpp
src/app/: CMakeLists.txt  StdInputStream.h  main.cpp
src/applib/: CMakeLists.txt  Processor.cpp
src/business_logic/: CMakeLists.txt  Processor.cpp  StringInputStream.h
src/main/: CMakeLists.txt
tests/: CMakeLists.txt  CliOptionsTests.cpp  ProcessorTests.cpp
tests/mocks/: MockFileHandler.hpp  MockFileInputStreamFactory.h  MockInputStream.h  MockOutputStream.h
